--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -1,16 +1,47 @@
+@font-face {
+font-family: 'entypo';
+    src:url('/fonts/entypo/entypo.eot');
+    src:url('/fonts/entypo/entypo.eot') format('embedded-opentype'),
+        url('/fonts/entypo/entypo.woff') format('woff'),
+        url('/fonts/entypo/entypo.ttf') format('truetype'),
+        url('/fonts/entypo/entypo.svg') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
 .header-wrapper {
 	height: 150px;
 	background-color: #393B45;
 }
 
+.search-icon:before {
+	font-family: "entypo";
+	content: "\1F50D";
+	speak: none;
+	color: #EBEEF2;
+	display: inline-block;
+}
+
 .site-title {
 	font-size: 1em;
-	color: #fff;
-	width: 33%;
+	color: #EBEEF2;
+	width: 100%;
+	height: 150px;
 	float: left;
 	display: inline;
-	margin: 0 auto;
+	font-family: 'Roboto Slab', serif;
+	line-height: 105px;
 }
+
+.site-title a {
+	text-decoration: none;
+	color: #EBEEF2;
+}
+
+.site-title h1 {
+	text-align: center;
+}
+
 
 #questions-display {
 	height: 500px;
@@ -18,9 +49,43 @@
 
 #content {
 	display: none;
+	margin-top: 10px;
 }
 
 #questions {
 	float: left;
 	border: 1px #000 solid;
+}
+
+.ribbons {
+	height: 15px;
+	background-color: white;
+}
+
+.ribbon {
+	width: 25%;
+	height: 100%;
+	float: left;
+}
+
+.ribbon-first {
+	background-color: #EA727F;
+}
+
+.ribbon-second {
+	background-color: #E95E6D;
+}
+
+.ribbon-third {
+	background-color: #E44E5E;
+}
+
+.ribbon-fourth {
+	background-color: #D83441;
+}
+
+.page {
+	max-width: 40em;
+	margin: 0 auto;
+	padding: 0;
 }
